radeon: fix compilation on xserver >= 1.10

Fixes:
https://bugs.freedesktop.org/show_bug.cgi?id=30451

Signed-off-by: Alex Deucher <alexdeucher@gmail.com>